--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -2,13 +2,28 @@ body{
   margin: 0;
   padding: 0;
 }
+th{
+  background-color: #f0f0f0;
+}
+th, td {
+  border: 1px solid #ccc;
+  width: 3%;
+  height: 3px;
+  text-align: left;
+}
 
+td {
+  cursor: text;
+}
+td:hover {
+  background-color: #f0f0f0;
+}
 
 .thead_th{
   text-align: center;
-  background-color: #f0f0f0;
+ 
   font-weight: 400;
-  height: 30px;
+  height: 20px;
   font-size: 15px;
 }
 
@@ -32,15 +47,11 @@ table {
   width: 100%;
 }
 
-th, td {
-  border: 1px solid #ccc;
-  width: 5%;
-  height: 5px;
-  text-align: left;
-}
-td {
-  cursor: text;
-}
-td:hover {
+
+
+
+
+.tbody_start{
+  text-align: center;
   background-color: #f0f0f0;
 }
