--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ th{
 th, td {
   border: 1px solid #ccc;
   text-align: left;
-}td {
+}
+td {
   cursor: text;
   padding-left: 5px;
   padding-right: 5px;
 }
-
 td:hover {
   background-color: #f0f0f0;
 }
@@ -65,4 +65,14 @@ table {
 
 .head_exel{
   background-color: #008000;
+}
+
+.head_button {
+  margin: 0 1px 10px 5px;
+  padding: 4px 7px;
+  border: none;
+  background-color: #ffffff;
+  color: #008000;
+  border-radius: 5px;
+  cursor: pointer;
 }
